--- a/index.html
+++ b/index.html
@@ -431,12 +431,12 @@
                         <div class="timeline">
                             <div class="timeline-item">
                                 <h4>Computer Science Degree</h4>
-                                <span>Stanford University | 2015 - 2019</span>
+                                <span>BRCM College of Engineering & Technology | 2021 - 2015</span>
                                 <p>Specialized in Software Engineering and Human-Computer Interaction</p>
                             </div>
                             <div class="timeline-item">
                                 <h4>Web Development Bootcamp</h4>
-                                <span>Code Masters | 2018</span>
+                                <span>Code Masters | 2024</span>
                                 <p>Intensive 6-month full stack development program</p>
                             </div>
                         </div>
@@ -450,7 +450,7 @@
                             </div>
                             <div class="timeline-item">
                                 <h4>Software Engineer</h4>
-                                <span>Digital Creations | 2018 - 2020</span>
+                                <span>Digital Creations | 2021 - 2025</span>
                                 <p>Developed and maintained client web applications</p>
                             </div>
                         </div>
