--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                         <div class="timeline">
                             <div class="timeline-item">
                                 <h4>Computer Science Degree</h4>
-                                <span>BRCM College of Engineering & Technology | 2021 - 2015</span>
+                                <span>BRCM College | 2021 - 2025</span>
                                 <p>Specialized in Software Engineering and Human-Computer Interaction</p>
                             </div>
                             <div class="timeline-item">
