--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional portfolio showcasing my projects and skills">
     <meta name="keywords" content="portfolio, developer, software engineer, web developer">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="theme-color" content="#6c63ff">
     <title>Sahil Sulakh | Full Stack Developer</title>
     
     <!-- Favicon -->
@@ -157,9 +158,9 @@
                 <!-- Personal Doctor -->
                 <div class="project-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-image">
-                        <img src="images/projects/PersonalDoctor.png" alt="Personal Doctor" target="_blank">
+                        <img src="images/projects/PersonalDoctor.png" alt="Personal Doctor">
                         <div class="project-links">
-                            <a href="https://personal-doctor.vercel.app/" class="project-link">
+                            <a href="https://personal-doctor-two.vercel.app/" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                             <a href="#" class="project-link">
@@ -424,48 +425,21 @@
                     </p>
                     <div class="about-tabs">
                         <div class="tab active" data-tab="education">Education</div>
-                        <div class="tab" data-tab="experience">Experience</div>
-                        <div class="tab" data-tab="certificates">Certificates</div>
                     </div>
                     <div class="tab-content active" id="education">
                         <div class="timeline">
                             <div class="timeline-item">
                                 <h4>Computer Science Degree</h4>
-                                <span>BRCM College | 2021 - 2025</span>
+                                <span>BRCM College | 2021 - 2015</span>
                                 <p>Specialized in Software Engineering and Human-Computer Interaction</p>
                             </div>
                             <div class="timeline-item">
                                 <h4>Web Development Bootcamp</h4>
-                                <span>Code Masters | 2024</span>
-                                <p>Intensive 6-month full stack development program</p>
+                                <span>Arya Senior Secondary School, Dhigawa Mandi | 2020 - 2021</span>
+                                <p>Grade: 80% in CBSE</p>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-content" id="experience">
-                        <div class="timeline">
-                            <div class="timeline-item">
-                                <h4>Senior Full Stack Developer</h4>
-                                <span>TechSolutions Inc. | 2020 - Present</span>
-                                <p>Lead developer for enterprise web applications</p>
-                            </div>
-                            <div class="timeline-item">
-                                <h4>Software Engineer</h4>
-                                <span>Digital Creations | 2021 - 2025</span>
-                                <p>Developed and maintained client web applications</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-content" id="certificates">
-                        <div class="timeline">
-                            <div class="timeline-item">
-                                <h4>AWS Certified Developer</h4>
-                                <span>Amazon Web Services | 2021</span>
-                            </div>
-                            <div class="timeline-item">
-                                <h4>Google Mobile Web Specialist</h4>
-                                <span>Google | 2020</span>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
