--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                 <p>Specialized in Software Engineering and Human-Computer Interaction</p>
                             </div>
                             <div class="timeline-item">
-                                <h4>Web Development Bootcamp</h4>
+                                <h4>12th, Non-Medical (PCM)</h4>
                                 <span>Arya Senior Secondary School, Dhigawa Mandi | 2020 - 2021</span>
                                 <p>Grade: 80% in CBSE</p>
                             </div>
